--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: 715},
+                                    { template: `version 715-2`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" }
                                 ]
