--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: `version 715`, autoheight: true },
+                                    { template: `version 715 - custom download`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" },
                                     {
