--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: `version 703`, autoheight: true },
+                                    { template: `version 703, custom download, version check`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" },
                                     {
