--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                                                     document.body.appendChild(a);
                                                     a.click();
                                                     document.body.removeChild(a);
+                                                    alert(iOSversion())
                                                 });
                                             } else {
                                                 $$("pdf").download();
