--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: `version 703`, autoheight: true },
+                                    { template: `version 703, downloading conditions`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" },
                                     {
