--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="./pdf-response.js"></script>
         <script>
         function iOSversion() {
             if (/iP(hone|od|ad)/.test(navigator.platform)) {
