--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: `version 703, download condition`, autoheight: true },
+                                    { template: `version 703, last version`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" },
                                     {
