--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <script src="./pdf-response.js"></script>
-        <script>
+         <script>
         function iOSversion() {
             if (/iP(hone|od|ad)/.test(navigator.platform)) {
                 var v = (navigator.appVersion).match(/OS (\d+)_(\d+)_?(\d+)?/);
@@ -34,34 +34,39 @@
                 navigator.userAgent.indexOf('CriOS') == -1 &&
                 navigator.userAgent.indexOf('FxiOS') == -1;
         }
-            
-            function openSaveFileDialog(data, filename, mimetype) {
 
+        function iosHigherVersions(data, filename, mimetype) {
             if (!data) return;
-
             var blob = data.constructor !== Blob
                 ? new Blob([data], { type: mimetype || 'application/octet-stream' })
                 : data;
-
             if (navigator.msSaveBlob) {
                 navigator.msSaveBlob(blob, filename);
                 return;
             }
-
-            var lnk = document.createElement('a'),
+            var link = document.createElement('a'),
                 url = window.URL,
                 objectURL;
-
             if (mimetype) {
-                lnk.type = mimetype;
+                link.type = mimetype;
             }
+            link.download = filename || 'untitled';
 
-            lnk.download = filename || 'untitled';
-            lnk.href = objectURL = url.createObjectURL(blob);
-            lnk.dispatchEvent(new MouseEvent('click'));
+            link.href = objectURL = url.createObjectURL(blob);
+            link.dispatchEvent(new MouseEvent('click'));
             setTimeout(url.revokeObjectURL.bind(url, objectURL));
-
         }
+
+        function iosLowerVersions(data, filename, mimetype) {
+            var blob = new Blob([data]);
+            var a = window.document.createElement("a");
+            a.href = window.URL.createObjectURL(blob, { type: mimetype });
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        }
+
 
         webix.ready(function () {
             webix.ui({
@@ -72,7 +77,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: `version 703, last version`, autoheight: true },
+                                    { template: `version 703`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" },
                                     {
@@ -81,9 +86,15 @@
                                         css: "webix_primary",
                                         autowidth: true,
                                         click: function () {
-                                            $$("pdf").$pdfDoc.getData().then((data) => {
-                                                    openSaveFileDialog(data, 'test', "application/pdf")
+                                            if (isIOS() && iOSversion() > 12) {
+                                                $$("pdf").$pdfDoc.getData().then((data) => {
+                                                    iosHigherVersions(data, "test", "application/pdf")
                                                 });
+                                            } else {
+                                                $$("pdf").$pdfDoc.getData().then((data) => {
+                                                    iosHigherVersions(data, 'test', "application/pdf")
+                                                });
+                                            }
                                         }
                                     }
                                 ]
