--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             { gravity: 0.5 },
                             {
                                 rows: [
-                                    { template: `version 703`, autoheight: true },
+                                    { template: `version 703, latest`, autoheight: true },
                                     { view: "pdfbar", id: "toolbar" },
                                     { view: "pdfviewer", id: "pdf", toolbar: "toolbar" },
                                     {
