--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         },
         {
           view: "button",
-          label: "Get lase file",
+          label: "Get last file",
           click: function () {
             const names = [], urls = Object.values($$("uploader").files.data.pull).map(({ file }) => {
               names.push(file.name);
